docs/stylesheets/extra.css
.hero-text {
    font-size: 1.3em;
    font-family: 'Poppins', sans-serif;
}

.menu-callout {
  background-color: var(--esys-orange-01);
  border: none;
  color: white;
  padding: 5px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  transition-duration: 0.4s;
  font-family: 'Poppins', sans-serif;
}

.menu-callout:hover {
  background-color: var(--esys-orange-04);
}

.header-links {
    display: block;
    list-style-type: none;
    margin-block-start: 0px;
    margin-block-end: 0px;
    padding: 0;
    padding-inline-start: 0;
}

.header-links li {
    display: inline;
}

header .header-links li {
    margin-left: 2em;
}

.header-links li:first-child {
    margin-left: 0px;
}

/* Highlight external links */
a[href*="//"]:not([href*="elastisys."])::after {
    content: ' ↗';
}

/* Firefox does not support the :has pseudo-selector.
 * Fortunately, we only have one image link in the docs */
.header-links a[href*="//"]:not([href*="elastisys."])::after {
    content: '';
}
.header-links a[href*="//"]:not([href*="elastisys."]) {
    border-bottom: 2px dashed #a8b1be;
}

/* Configure the `elastisys` custom admonition
 * https://squidfunk.github.io/mkdocs-material/reference/admonitions/#custom-admonitions
 */
.md-typeset .admonition.elastisys,
.md-typeset details.elastisys {
  border-color: var(--md-primary-fg-color);
}
.md-typeset .elastisys > .admonition-title,
.md-typeset .elastisys > summary {
  background-color: rgba(43, 155, 70, 0.1);
}
.md-typeset .elastisys > .admonition-title::before,
.md-typeset .elastisys > summary::before {
  background-image:
    url('../img/logos/elastisys-logo-icon.svg');
  background-size: cover;
  -webkit-mask-image: none
  mask-image: none
}

/* This looks repetitive, but we need to be more specific than
 * whatever CSS mkdocs-material provides. */
.columns.columns.columns {
  display: flex;
  flex-flow: row;
  margin: 0;
  padding: 0;
  gap: 10px
}

.columns.columns.columns div {
  width: 100%;
  border: 5px solid var(--esys-blue-04);
  text-align: center;
  padding: 12px 24px;
  margin: 0;
  border-radius: 20px;

  display: flex;
  flex-flow: column;
}

.columns.columns.columns li {
  text-align: center;
  margin: 0;
  padding: 12px 24px;
  list-style-type: none;
}

.columns.columns.columns img {
  max-width: 256px;
  height: 128px;
}

.columns.columns.columns div dt {
  font-weight: bold;
}

.columns.columns.columns div dd {
  margin: 0;
  padding: 12px;
}

.columns.columns.columns div dd.grow-me {
  margin: 0;
  padding: 12px;
  flex-grow: 4;
}

@media (max-width: 960px) {
  .columns.columns.columns {
    flex-flow: column;
  }
}

a[role=button] {
  background-color: var(--esys-orange-01);
  color: white;
  padding: 12px 24px;
  border-radius: 20px;
  font-size: 14px;
}

#trusted-by {
  margin: 0;
  padding: 0;

  background-color: var(--esys-blue-01);

  display: flex;
  flex-flow: row;
  align-items: center;
  gap: 10px
}

#trusted-by li {
  width: 100%;
  list-style-type: none;
  padding: 12px 24px;
  margin: 0;
}

